tools/tests/errors/surf_cls_04.experr
'C' object has no attribute 'nope'
